--- a/系统性能分析__笔记_《性能之巅：洞悉系统_企业与云计算》.md
+++ b/系统性能分析__笔记_《性能之巅：洞悉系统_企业与云计算》.md
@@ -2,9 +2,25 @@
 
 ## 1. 绪论
 
+系统性能是对整个系统的研究，包括了所有的硬件组件和整个软件栈。所有数据路径上和软硬件上所发生的事情集合，因为这些都会影响性能。
+
 ### 1.1 通用系统软件栈
 
+![å¨è¿éæå¥å¾çæè¿°](https://img-blog.csdnimg.cn/20181219205301572.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3p1b3pld2Vp,size_16,color_FFFFFF,t_70)
+
 ### 1.2 性能的事情列表
+
+| 性能事件                                   |
+| ------------------------------------------ |
+| 设置性能目标和建立性能模型                 |
+| 基于软件和硬件原型，归纳出性能特征         |
+| 对开发代码进行性能分析（软件整合之前）     |
+| 执行软件非回归性测试（软件发布前或发布后） |
+| 针对软件发布版本的基准测试                 |
+| 目标环境中的概念验证测试                   |
+| 生产环境部署的配置优化                     |
+| 监控生产环境中运行的软件                   |
+| 特定问题的性能分析                         |
 
 ### 1.3 两种性能分析视觉：资源分析和负载分析
 
