--- a/系统性能分析__笔记_《性能之巅：洞悉系统_企业与云计算》.md
+++ b/系统性能分析__笔记_《性能之巅：洞悉系统_企业与云计算》.md
@@ -24,6 +24,19 @@
 
 ### 1.3 两种性能分析视觉：资源分析和负载分析
 
+性能术语**“容量规划”（capacity planning）**指的是一系列事前行动。在设计阶段，包括通过研究开发软件的资源占用情况，来得知原有设计在多大程度上能满足目标需求。在部署后，包括监控资源的使用情况，这样问题在出现之前就能预测到。
+
+![å¨è¿éæå¥å¾çæè¿°](https://img-blog.csdnimg.cn/20181219205613470.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3p1b3pld2Vp,size_16,color_FFFFFF,t_70)
+
+- 资源分析指标：IPOS，吞吐量，使用率，饱和度
+- 工作负载指标：吞吐量和延时。
+
+性能分析必须量化问题的重要与否程度，有一个指标很合适，叫做延时（latency）
+
+动态跟踪技术把所有的软件变得可监控，而且能用于真实的生产环境中。这项技术利用内存中的 CPU 指令并在这些指令上动态构建检测数据。这样能从任何运行的软件中获取定制化的性能统计数据，从而提供远超系统自带统计所能给予的观测性。
+
+DTrace 对用户态和内核态的软件都提供了静态跟踪和动态跟踪，并且数据是实时产生的。
+
 ### 1.4 受测系统
 
 ### 1.5 排队系统
