--- a/系统性能分析__笔记_《性能之巅：洞悉系统_企业与云计算》.md
+++ b/系统性能分析__笔记_《性能之巅：洞悉系统_企业与云计算》.md
@@ -1,5 +1,13 @@
 # 系统性能分析--读书笔记--《性能之巅：洞悉系统，企业和云计算》
 
+
+
+#### 推荐诊断 CheckLists: 
+
+![img](https://img-blog.csdnimg.cn/20181219214641376.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3p1b3pld2Vp,size_16,color_FFFFFF,t_70)
+
+
+
 ## 1. 绪论
 
 系统性能是对整个系统的研究，包括了所有的硬件组件和整个软件栈。所有数据路径上和软硬件上所发生的事情集合，因为这些都会影响性能。
